--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ p {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 34px;
     font-weight: bold;
+    text-align: center;
 }
 
 #p {
